--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,15 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-html-parser": "^2.0.2",
+    "react-icons": "^5.0.1",
+    "sass": "^1.72.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-html-parser": "^2.0.6",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
